# do-or-lose

./: .gitignore  PORTFOLIO.md  README.md  constants.py  main.py  models.py  pyproject.toml  questions.py  requirements-dev.txt  requirements.txt  run.sh  theme.py
.github/workflows/: build-deploy.yml
scripts/: capture_screenshots.py
tests/: test_layout.py  test_models.py  test_questions.py
