[project]
name = "forfest"
version = "1.0.0"
description = "Förfest — svenskt förfest-spel med textkort"
requires-python = ">=3.11"
dependencies = ["flet==0.85.1"]

[tool.flet]
org = "com.linneaegner"
product = "Förfest"

[tool.flet.web]
route_url_strategy = "hash"
pwa_background_color = "#1A1028"
pwa_theme_color = "#1A1028"
