[project]
name = "rundan"
version = "1.0.0"
description = "Rundan — svenskt partykortspel med textkort"
requires-python = ">=3.11"
dependencies = ["flet==0.85.1"]

[tool.flet]
org = "com.linneaegner"
product = "Rundan"

[tool.flet.web]
route_url_strategy = "hash"
pwa_background_color = "#1A1028"
pwa_theme_color = "#1A1028"
